analyzing mtDNA from barra

--- a/1302-de-novo-mtdna.Rmd
+++ b/1302-de-novo-mtdna.Rmd
@@ -117,3 +117,82 @@ srun -p med -t 40:00:00 --mem=32GB --nodes=1 --cpus-per-task=4 get_organelle_fro
 srun -p med -t 40:00:00 --mem=32GB --nodes=1 --cpus-per-task=4 get_organelle_from_reads.py -1 data/lakdiva/Trinco1-R1.fastq.gz -2 data/lakdiva/Trinco1-R2.fastq.gz -R 10 -k 21,45,65,85,105 -F animal_mt -o data/harvest/Trinco1 > data/harvest/Trinco1.out 2> data/harvest/Trinco1.err &
 
 ```
+
+
+What about Wallacea---
+
+I have de novo assembled this previously...
+SRR3165613 is from Kalimantan
+
+>SRR3165613
+ATATAATTATACATATATGTATTTACACCATGCATTTATGCTAACCAATAAGTGAATATA
+TGGTGTAAATGCATATATATATATATGTATTAATCAACATCTGCTTGTAATCAAAGGACA
+TATGTGCATTCAATGGTATTCGTAAATGTAATGTACGGTGACCTATAATTAATGTACTTT
+AAACAATAATATTACATATTAATCATCAACAATAATTATTGGGCGTAGTGAGAGATCACC
+AATTAGTAGGTACTCAGAGTGTTGACGGTTCTTGATAGTCAAGGACAAACACGGCGTGGG
+GGTTACACAAATTGAACTATTACTGGCATTTGGTTCCTACCTCAGGTACATGGATGAGAA
+AGATTCCACTGACGTTCCTTCATAAATGGCATAAGTTAATGGTGGATAACATGAATCCTC
+GTTACCCACCAAGCCGAGCATTCTTTCCAGCGGGTAAGGGGTTTAATAATTTTTTTCTTA
+TCATCTCATTTGACATCTCAGAGTGCACGCGCAGAGCATATAATATGGAAGTAGAACATA
+AATCTTTTTATGGAAGAGAAATAGTCAGTATGAATGGTGAAAAGACTTGACCTGAAGAAT
+TACATGATAGGATATCACGAGCATAACGTGCTAACCTTCTACTCCCAACATATCTATTAA
+TCCACCCCGTTTTTATTACGCAACCCCCCCCCCCCCCCCCCACGAAAGTTCTTTTATCTC
+ACCACACAAATTTTTCAACAATTATTCATACTTTGGGTGAGGTGTTAGTTTTTCGTCATA
+ATTTTAGACACCCACACGCACACAAAGCCACACATTCATCCCGCGCACACATACACCACC
+TCCATTCTCGGCATCACAAGGCCACCTCTTCTTCTCTCCAGCCCCCACCCTCCTCTCCCT
+CTTCCTCTCTGTCTCTCTCTCTTTTCTTTCCTGCTCTCACTTCCCGCCTGCCCTTCTCCC
+CCCTTTCCCATTATTTCATCTGTTCTTTTTTTTTTTTTCCTCTTGCCTCCTCATCTCACA
+TCCTTTTCTCTCCTCACCTTTTTCCCGTTCCTTCACTTCACCCTGGCCCCCGTCCTCCCT
+GTGCCCTCTGCTCCGTCCCAGCTGCATCTCCCTCCCTCGCTTTTTTCCCTCCCACTCCTT
+AATCTTCCACCTCTCCTCCTCCTCCACCACCCCCTCCTCTGCTGTAAGTGGGCCAGGTGC
+CTCCTGTGGCCTCCCCTACTCCATTTCTCATTTTTACCCTTCCTCTACTCCCTTTCTCAT
+TTTTACCCTCTCCCTGTTCCCTTTCTCATTTTTATCCTTCCCCCTGACCCTAGCTCATAT
+TTATACATCCTGTTAATGCAACAGCTCGCGTCAATGGACGACAGGTCCAGTTTTCCTGGT
+AAAACACAAACATTTTTTGGCCTGATGCACCATTAGTTGCAAAGTTGAGCCGTCCAAGTT
+AGAACAACTTCTCTCTTGAGGTTAGAGGGTGATGTCTCAAAGAGGGGAGTGGGTGATTTT
+GAAATTAAAAGGCGTTTTCAGCACTGAAAGACTCATTCTTAGTATGTATCATTTCGTGAA
+CTTTATAAATCCGCGATGAAAGTGCTGCTTTGTCATTGTTGCTGGACATTTTACGAGCTC
+TCCTGCGTTAGTGTGGTTCCCTTTATGAACACGAGACGTGAAGCCAATCCAAATGTGAAC
+AGAAGTGAGTAAGTTCACATCCCCTTTTCAGTGGTGAGGGGCAAATTTCCCCAACGGCCT
+ACTCTCCACTCCTCCCAGTGTTGCATCTGCACAAGCACACACACACACACACACACACAC
+ACACACCGAAACATGCGTATACATGGAAGTCTCATTGTTTCTGTCTTTTTGTTCTCCTCT
+CGCTCTGTGAATGCACACGGTGAGCTGGCAGTGCGCTTTTCACCTCATCTCATCCCCTGT
+ATTTTCTTCTTTTTTTTCCCCCCACACTCTTCCTCTTTTCACTCATTGTCATTCTCTTTG
+CCTTTGTCTCTGGCTGGCTCTTTCCCTTGCCCTCTTCTTTTTTCTTTTTTTTTTTTTTTT
+TTCTTCCCCTTTTCCTCACCCCCCCCCCCCCCCCCCCTTTTTTTTTTCCCCCCCCCCCCC
+CCCCCCCACAATAACTTGATCTTAATCTAAAAATGCACTATTTACACTATTTAAAATATT
+TTAAGAA
+
+SRR3165614 is from Kalimantan
+SRR3165612 is from Sulawesi
+
+module load blast-plus
+(base) maccamp@farm:~/lates-wgs/data/denovo/SRR3165613$ blastn -query contigs.fasta -db ~/lates-wgs/genome/NC_007439.1.fasta -outfmt 6
+NODE_326_length_17913_cov_28.471721	NC_007439.1	98.649	15837	181	26	1363	17172	705	16535	0.0	28029
+NODE_326_length_17913_cov_28.471721	NC_007439.1	94.026	703	29	9	17173	17874	1	691	0.0	1053
+
+samtools faidx contigs.fasta
+samtools faidx contigs.fasta NODE_326_length_17913_cov_28.471721 
+
+SRR3165612 is fragmentary
+
+SRR3165618 is NT
+SRR3165629 is QLD
+SRR3165624 is PNG
+
+```{sh, eval=FALSE}
+
+conda activate getorganelle
+
+srun -p med -t 40:00:00 --mem=32GB --nodes=1 --cpus-per-task=4 get_organelle_from_reads.py -1 data/denovo/SRR3165613.sralite.1_pass_1.fastq.gz -2 data/denovo/SRR3165613.sralite.1_pass_2.fastq.gz -R 10 -k 21,45,65,85,105 -F animal_mt -o data/harvest/SRR3165613 > data/harvest/SRR3165613.out 2> data/harvest/SRR3165613.err &
+
+srun -p med -t 40:00:00 --mem=32GB --nodes=1 --cpus-per-task=4 get_organelle_from_reads.py -1 data/denovo/SRR3165614.sralite.1_pass_1.fastq.gz -2 data/denovo/SRR3165614.sralite.1_pass_2.fastq.gz -R 10 -k 21,45,65,85,105 -F animal_mt -o data/harvest/SRR3165614 > data/harvest/SRR3165614.out 2> data/harvest/SRR3165614.err &
+
+srun -p med -t 40:00:00 --mem=32GB --nodes=1 --cpus-per-task=4 get_organelle_from_reads.py -1 data/denovo/SRR3165612.sralite.1_pass_1.fastq.gz -2 data/denovo/SRR3165612.sralite.1_pass_2.fastq.gz -R 10 -k 21,45,65,85,105 -F animal_mt -o data/harvest/SRR3165612 > data/harvest/SRR3165612.out 2> data/harvest/SRR3165612.err &
+
+srun -p med -t 40:00:00 --mem=32GB --nodes=1 --cpus-per-task=4 get_organelle_from_reads.py -1 data/denovo/SRR3165618.sralite.1_pass_1.fastq.gz -2 data/denovo/SRR3165618.sralite.1_pass_2.fastq.gz -R 10 -k 21,45,65,85,105 -F animal_mt -o data/harvest/SRR3165618 > data/harvest/SRR3165618.out 2> data/harvest/SRR3165618.err &
+
+srun -p med -t 40:00:00 --mem=32GB --nodes=1 --cpus-per-task=4 get_organelle_from_reads.py -1 data/denovo/SRR3165629.sralite.1_pass_1.fastq.gz -2 data/denovo/SRR3165629.sralite.1_pass_2.fastq.gz -R 10 -k 21,45,65,85,105 -F animal_mt -o data/harvest/SRR3165629 > data/harvest/SRR3165629.out 2> data/harvest/SRR3165629.err &
+
+srun -p med -t 40:00:00 --mem=32GB --nodes=1 --cpus-per-task=4 get_organelle_from_reads.py -1 data/denovo/SRR3165624.sralite.1_pass_1.fastq.gz -2 data/denovo/SRR3165624.sralite.1_pass_2.fastq.gz -R 10 -k 21,45,65,85,105 -F animal_mt -o data/harvest/SRR3165624 > data/harvest/SRR3165624.out 2> data/harvest/SRR3165624.err &
+```
