--- a/1304-daly-roper.Rmd
+++ b/1304-daly-roper.Rmd
@@ -46,3 +46,36 @@ cat AGRF_NXGSQCAGRF25050141-1_22YGFCLT4/D8*R2.fastq.gz > Daly08-R2.fastq.gz
 basic align
 
 bash ../../doAlign-zipped.sh to-align.txt /home/maccamp/lates-wgs/genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna.gz
+
+View stats:
+
+Daly01,316492070,271334403,58.7496
+Daly02,326046177,283926139,60.2108
+Daly03,250931941,216745151,47.0122
+Daly04,228200523,200254294,43.2608
+Daly05,358110468,308080850,66.6556
+Daly06,288183066,246600489,53.1609
+Daly07,302850614,258326860,55.7428
+Daly08,277003928,240831949,52.1401
+
+Yowsers!!
+
+Set up downsample.
+
+```{r}
+m126<-read_csv("meta/m126.csv")
+m126
+```
+
+_3_ Downsample.  
+
+```{r}
+
+down<-m126 %>% filter(Locality=="Daly River") %>% mutate(Frac=7/Coverage) %>%
+  mutate(Command = paste0("samtools view -bs ", Frac, " ", "data/daly/",Run,".sort.flt.bam", " > ",   "/home/maccamp/lates-wgs/data/downsample/", Run, ".reduced.bam ;"," samtools index ", "/home/maccamp/lates-wgs/data/downsample/", Run, ".reduced.bam ;")) 
+down %>% select(Command)
+ down %>% select(Command) %>% write_tsv(file="1304.1-downsample.sh", col_names = FALSE)
+```
+
+module load parallel
+srun -p high --time 4:00:00 --nodes=1 --ntasks-per-node=1 --cpus-per-task=8 parallel -j 8 < 1304.1-downsample.sh
