--- a/1304-daly-roper.Rmd
+++ b/1304-daly-roper.Rmd
@@ -74,8 +74,104 @@ _3_ Downsample.
 down<-m126 %>% filter(Locality=="Daly River") %>% mutate(Frac=7/Coverage) %>%
   mutate(Command = paste0("samtools view -bs ", Frac, " ", "data/daly/",Run,".sort.flt.bam", " > ",   "/home/maccamp/lates-wgs/data/downsample/", Run, ".reduced.bam ;"," samtools index ", "/home/maccamp/lates-wgs/data/downsample/", Run, ".reduced.bam ;")) 
 down %>% select(Command)
- down %>% select(Command) %>% write_tsv(file="1304.1-downsample.sh", col_names = FALSE)
+down %>% select(Command) %>% write_tsv(file="1304.1-downsample.sh", col_names = FALSE)
+ 
 ```
 
 module load parallel
 srun -p high --time 4:00:00 --nodes=1 --ntasks-per-node=1 --cpus-per-task=8 parallel -j 8 < 1304.1-downsample.sh
+
+Let's just look at the first LG in AUS
+
+
+Look at basic popgen in Australasia
+
+```{r}
+m48<-m126 %>% filter(Lineage %in% c("AUS","Mainstream")) %>% mutate(Individual=1:n())
+
+m48 %>% select(NewPath) %>% write_tsv("bamlists/48.bamlist", col_names=FALSE)
+m48 %>% select(Run) %>% write_tsv("bamlists/48-sample-names.txt", col_names=FALSE)
+
+meta<-m48
+```
+
+Chrom01 then all chroms
+
+```{sh, eval=FALSE}
+srun -p high -t 16:00:00 --mem=32G --nodes=1 --cpus-per-task=6  $HOME/angsd/angsd -P 6  \
+-bam bamlists/28.bamlist -r NC_066833.1 \
+-ref  genome/GCF_001628805.2_TLL_Latcal_v3_genomic.fna \
+-minInd 36 -minMapQ 20 -minQ 20 -GL 2 -doGLF 2 \
+-doMajorMinor 1 -doMaf 1 -SNP_pval 1e-6 \
+-doIBS 1 -doCounts 1 -doCov 1 -makeMatrix 1 -minMaf 0.05 \
+-out outputs/1304/48-ibs-90-Lcal01 > outputs/1304/48-ibs-90-Lcal01.out 2> outputs/1304/48-ibs-90-Lcal01.err &
+
+srun -p high -t 16:00:00 --mem=32G --nodes=1 --cpus-per-task=6  $HOME/angsd/angsd -P 6  \
+-bam bamlists/48.bamlist -rf meta/lates-lgs.txt \
+-ref  genome/GCF_001648805.2_TLL_Latcal_v3_genomic.fna \
+-minInd 36 -minMapQ 20 -minQ 20 -GL 2 -doGLF 2 \
+-doMajorMinor 1 -doMaf 1 -SNP_pval 1e-6 \
+-doIBS 1 -doCounts 1 -doCov 1 -makeMatrix 1 -minMaf 0.05 \
+-out outputs/1304/48-ibs-90 > outputs/1304/48-ibs-90.out 2> outputs/1304/48-ibs-90.err &
+```
+
+	-> Number of sites retained after filtering: 75260 (chrom01)
+	-> Number of sites retained after filtering: 1953593 
+
+
+```{r}
+m <- as.matrix(read.table("outputs/1304/48-ibs-90.covMat"))
+eig <- eigen(m)
+var<-eig$values/sum(eig$values)
+cumvar<-cumsum(eig$values)/sum(eig$values)
+
+head(var)
+head(cumvar)
+
+vdf<-var %>% as_tibble() %>% rename(Variance=value) %>% mutate(PC=1:n()) %>% head(n=10)
+
+ggplot(vdf) +
+  geom_line(aes(x=PC, y=Variance)) +
+  theme_bw() +
+  theme(panel.grid = element_blank()) +
+  scale_x_continuous(breaks=vdf$PC) +
+  theme(axis.text=element_text(size=8))
+
+ggsave("outputs/1304/Australasian-scree-plot.jpeg")
+```
+
+
+```{r}
+covs<-eig$vectors[,1:3] %>% as_tibble() %>% bind_cols(meta)
+
+text12<-covs %>% select(Run, Region, V1, V2) %>%
+  group_by(Region) %>% summarize(Count=n(), x=mean(V1), y=mean(V2))
+
+ggplot(covs) +
+  geom_point(aes(x=V1, y=V2, fill=Locality), pch=21, alpha=0.75, cex=2) +
+  geom_text_repel(data=text12, aes(x=x, y=y, label=Region), max.overlaps = Inf) +
+  xlab(paste("PC1", " ", round((100*var[1]),2), "%", sep = "")) +
+  ylab(paste("PC2", " ", round((100*var[2]),2), "%", sep = "")) +
+  theme_bw() +
+  theme(panel.grid=element_blank()) +
+  scale_fill_viridis_d(option="magma") +
+  ggtitle("Genome-Wide PCA of Australasian L. calcarifer WGS Data") +
+  theme(plot.title = element_text(hjust=0.5, face="bold"))
+
+ggsave("outputs/1304/australasian-lates-pc12.jpeg")
+
+text13<-covs %>% select(Run, Region, V1, V3) %>%
+  group_by(Region) %>% summarize(Count=n(), x=mean(V1), y=mean(V3))
+
+ggplot(covs) +
+  geom_point(aes(x=V1, y=V3, fill=Locality), pch=21, alpha=0.75, cex=2) +
+  geom_text_repel(data=text12, aes(x=x, y=y, label=Region), max.overlaps = Inf) +
+  xlab(paste("PC1", " ", round((100*var[1]),2), "%", sep = "")) +
+  ylab(paste("PC3", " ", round((100*var[3]),2), "%", sep = "")) +
+  theme_bw() +
+  theme(panel.grid=element_blank()) +
+  scale_fill_viridis_d(option="magma") +
+  ggtitle("Genome-Wide PCA of Australasian L. calcarifer WGS Data") +
+  theme(plot.title = element_text(hjust=0.5, face="bold"))
+
+```
